force-app/main/default/objects/StellaConnect__Stella_Connect_Field_Mapping__c/StellaConnect__Stella_Connect_Field_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Stella Connect Field Mapping</label>
</CustomObject>