force-app/main/default/objects/StellaConnect__Stella_Connect_Field_Mapping__c/fields/StellaConnect__Active__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>