force-app/main/default/objects/StellaConnect__Stella_Connect_Field_Mapping__c/fields/StellaConnect__Employee_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Employee_Field_Type__c</fullName>
    <defaultValue>&quot;email&quot;</defaultValue>
    <label>Employee Field Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>