force-app/main/default/objects/StellaConnect__Stella_Connect_Field_Mapping__c/fields/StellaConnect__Language_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Language_Field_Name__c</fullName>
    <label>Language Field Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>