force-app/main/default/objects/StellaConnect__Stella_Connect_Field_Mapping__c/fields/StellaConnect__Related_To_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Related_To_Object_Name__c</fullName>
    <label>Related To Object Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>