force-app/main/default/objects/StellaConnect__Stella_Connect_Field_Mapping__c/fields/StellaConnect__Target_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Target_Object_Name__c</fullName>
    <label>Target Object Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>