force-app/main/default/objects/StellaConnect__Stella_Connect_Field_Mapping__c/listViews/StellaConnect__All.listView-meta.xml
<ListView>
    <fullName>StellaConnect__All</fullName>
    <columns>NAME</columns>
    <columns>StellaConnect__Target_Object_Name__c</columns>
    <columns>StellaConnect__Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>